[package]
name = "game_script"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
bytemuck = "1.13.1"
game_common = { version = "0.1.0", path = "../game_common" }
game_wasm = { version = "0.1.0", path = "../game_wasm", features = ["raw"] }
game_data = { version = "0.1.0", path = "../game_data" }
glam = "0.24.0"
thiserror = "1.0.40"
tracing = "0.1.37"
wasmtime = "17.0.0"
game_physics = { version = "0.1.0", path = "../game_physics" }
slotmap = "1.0.6"
game_tracing = { version = "0.1.0", path = "../game_tracing" }
