[package]
name = "game_script"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
bytemuck = "1.16.1"
game_common = { version = "0.1.0", path = "../game_common" }
game_wasm = { version = "0.1.0", path = "../game_wasm", features = ["raw"] }
game_data = { version = "0.1.0", path = "../game_data" }
game_prefab = { version = "0.1.0", path = "../game_prefab" }
glam = "0.28.0"
thiserror = "1.0.61"
tracing = "0.1.40"
game_physics = { version = "0.1.0", path = "../game_physics" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

[dependencies.wasmtime]
version = "22.0.0"
default-features = false
features = [
    "runtime",
    "cranelift",
    "wat",
    "parallel-compilation",
    "pooling-allocator",
    "demangle",
    "coredump",
    "addr2line",
    "debug-builtins",
]
