[package]
name = "game_server"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["physics"]
# Enable game physics.
# Note that disabling physics is only useful for testing. The game might not function
# correctly without physics.
physics = []

[lints]
workspace = true

[dependencies]
ahash = "0.8.3"
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.26"
game_common = { version = "0.1.0", path = "../game_common" }
game_core = { version = "0.1.0", path = "../game_core" }
game_net = { version = "0.1.0", path = "../game_net" }
parking_lot = "0.12.1"

tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time"] }
tracing = "0.1.37"
game_physics = { version = "0.1.0", path = "../game_physics" }
game_script = { version = "0.1.0", path = "../game_script" }
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }
glam = "0.24.0"
game_data = { version = "0.1.0", path = "../game_data" }
game_worldgen = { version = "0.1.0", path = "../game_worldgen" }
game_scene = { version = "0.1.0", path = "../game_scene" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }
game_wasm = { version = "0.1.0", path = "../game_wasm" }
