[package]
name = "game_tasks"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
crossbeam = "0.8.2"
futures = "0.3.28"
parking_lot = "0.12.1"

[target.'cfg(loom)'.dependencies]
loom = "0.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[test]]
name = "loom"
path = "tests/park/loom.rs"

[[bench]]
name = "spawn"
path = "benches/spawn.rs"
harness = false
