[package]
name = "game_tracing"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []
tracy = ["tracing-tracy"]

[lints]
workspace = true

[dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
glam = "0.28.0"
tracing = "0.1.40"

tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.0", optional = true }
