[package]
name = "game_tracing"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []
tracy = ["tracing-tracy", "tracy-client"]

[lints]
workspace = true

[dependencies]
glam = "0.28.0"
tracing = "0.1.40"

tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.1", optional = true }

[dependencies.tracy-client]
version = "=0.17.1"
optional = true
default-features = false
features = [
    "enable",
    "system-tracing",
    "context-switch-tracing",
    # Require manual client startup before it can be used.
    "manual-lifetime",
    "callstack-inlines",
    "code-transfer",
    "broadcast",
]
