[package]
name = "game_ui"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["debug_render"]
# Enables the debug renderer, drawing additional
# debugging information like element borders and
# padding values.
debug_render = []

[dependencies]
game_input = { version = "0.1.0", path = "../game_input" }
game_render = { version = "0.1.0", path = "../game_render" }
game_window = { version = "0.1.0", path = "../game_window" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }

glam = "0.24.0"
ab_glyph = "0.2.21"
image = "0.24.6"
wgpu = "0.16.0"
bytemuck = "1.13.1"

parking_lot = "0.12.1"
slotmap = "1.0.6"
tracing = "0.1.37"
hex = "0.4.3"
thiserror = "1.0.40"

[dev-dependencies]
game_common = { version = "0.1.0", path = "../game_common" }
criterion = "0.4"

[[test]]
name = "layout_table"
path = "tests/layout/table.rs"

[[test]]
name = "layout_table_interleaved"
path = "tests/layout/table_interleaved.rs"

[[bench]]
name = "layout_flat"
path = "benches/layout.rs"
harness = false

[[bench]]
name = "background"
path = "benches/render/background.rs"
harness = false
