[package]
name = "game_ui"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []

[lints]
workspace = true

[dependencies]
game_input = { version = "0.1.0", path = "../game_input" }
game_render = { version = "0.1.0", path = "../game_render" }
game_window = { version = "0.1.0", path = "../game_window" }
game_tracing = { version = "0.1.0", path = "../game_tracing" }
game_common = { version = "0.1.0", path = "../game_common" }
game_tasks = { version = "0.1.0", path = "../game_tasks" }

glam = "0.28.0"
ab_glyph = "0.2.28"
image = "0.25.1"
wgpu = "0.19.1"
bytemuck = "1.16.1"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
slotmap = "1.0.7"
tracing = "0.1.40"
hex = "0.4.3"
thiserror = "1.0.61"
async-io = "2.3.3"
futures = "0.3.30"

# SVG rendering
usvg = "0.42.0"
resvg = "0.42.0"
tiny-skia = "0.11.4"

# Clipboard
arboard = "3.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[test]]
name = "layout_table"
path = "tests/layout/table.rs"

[[test]]
name = "layout_table_interleaved"
path = "tests/layout/table_interleaved.rs"

[[bench]]
name = "layout_flat"
path = "benches/layout.rs"
harness = false

[[bench]]
name = "background"
path = "benches/render/background.rs"
harness = false
