[package]
name = "game_wasm"
version = "0.1.0"
edition = "2021"

[features]
default = []
raw = []
panic_handler = []

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros", features = ["wasm"] }

bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.23.0", default-features = false, features = ["libm"] }
