[package]
name = "game_wasm"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []
raw = []
global_alloc = ["dlmalloc"]

[lints]
workspace = true

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros", features = ["wasm"] }
libm = "0.2.8"
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.23.0", default-features = false, features = ["libm"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = { version = "0.2.4", features = ["global"], optional = true }
