[package]
name = "game_wasm"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
license = "GPL-3.0-or-later"

[features]
default = []
raw = []
global_alloc = ["dlmalloc"]

[lints]
workspace = true

[dependencies]
game_macros = { version = "0.1.0", path = "../game_macros", features = ["wasm"] }
libm = "0.2.8"
bytemuck = { version = "1.16.1", features = ["derive"] }
glam = { version = "0.28.0", default-features = false, features = ["libm", "bytemuck"] }
bytes = { version = "1.6.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
thiserror = "1.0.61"

[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = { version = "0.2.4", features = ["global"], optional = true }
